@@ -182,6 +182,7 @@ void ShutDownMemHandles(Section * sec);
 
 SDL_Block sdl;
 Bitu frames = 0;
+unsigned int page=0;
 
 ScreenSizeInfo          screen_size_info;
 
@@ -195,74 +196,14 @@ void MenuUnmountDrive(char drive);
 void SetGameState_Run(int value);
 size_t GetGameState_Run(void);
 
-bool save_slot_0_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
+bool save_slot_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
     (void)menu;//UNUSED
     (void)menuitem;//UNUSED
-	SetGameState_Run(0);
-	return true;
-}
 
-bool save_slot_1_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(1);
-	return true;
-}
-
-bool save_slot_2_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(2);
-	return true;
-}
-
-bool save_slot_3_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(3);
-	return true;
-}
-
-bool save_slot_4_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(4);
-	return true;
-}
-
-bool save_slot_5_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(5);
-	return true;
-}
-
-bool save_slot_6_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(6);
-	return true;
-}
-
-bool save_slot_7_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(7);
-	return true;
-}
-
-bool save_slot_8_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(8);
-	return true;
-}
-
-bool save_slot_9_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-	SetGameState_Run(9);
-	return true;
+    const char *mname = menuitem->get_name().c_str();
+    if (!strncmp(mname,"slot",4)&&isdigit(*(mname+4)))
+        SetGameState_Run(page*10+std::stoi(mname+4));
+    return true;
 }
 
 #if defined(WIN32)
@@ -7939,16 +7880,76 @@ bool force_loadstate_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * c
     return true;
 }
 
-bool refresh_slots_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
+void refresh_slots() {
 	for (unsigned int i=0; i<SaveState::SLOT_COUNT; i++) {
 		char name[6]="slot0";
 		name[4]='0'+i;
-		std::string command=SaveState::instance().getName(i);
-		std::string str="Slot "+(i>=9?"10":std::string(1, '1'+i))+(command==""?"":" "+command);
+		std::string command=SaveState::instance().getName(page*SaveState::SLOT_COUNT+i);
+		std::string str="Slot "+to_string(page*SaveState::SLOT_COUNT+i+1)+(command==""?"":" "+command);
 		mainMenu.get_item(name).set_text(str.c_str()).refresh_item(mainMenu);
 	}
+}
+
+bool refresh_slots_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * const menuitem) {
+    (void)menu;//UNUSED
+    (void)menuitem;//UNUSED
+    refresh_slots();
+    return true;
+}
+
+bool first_page_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * const menuitem) {
+    if (page>0) {
+        char name[6]="slot0";
+        name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+        mainMenu.get_item(name).check(false).refresh_item(mainMenu);
+        page=0;
+        if (GetGameState_Run()/SaveState::SLOT_COUNT==page) {
+            name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+            mainMenu.get_item(name).check(true).refresh_item(mainMenu);
+        }
+        refresh_slots_menu_callback(menu, menuitem);
+    }
+    return true;
+}
+
+bool last_page_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * const menuitem) {
+    if (page<SaveState::MAX_PAGE-1) {
+        char name[6]="slot0";
+        name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+        mainMenu.get_item(name).check(false).refresh_item(mainMenu);
+        page=SaveState::MAX_PAGE-1;
+        if (GetGameState_Run()/SaveState::SLOT_COUNT==page) {
+            name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+            mainMenu.get_item(name).check(true).refresh_item(mainMenu);
+        }
+        refresh_slots_menu_callback(menu, menuitem);
+    }
+    return true;
+}
+
+bool prev_page_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * const menuitem) {
+	char name[6]="slot0";
+	name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+	mainMenu.get_item(name).check(false).refresh_item(mainMenu);
+    if (page>0) page--;
+    if (GetGameState_Run()/SaveState::SLOT_COUNT==page) {
+        name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+        mainMenu.get_item(name).check(true).refresh_item(mainMenu);
+    }
+    refresh_slots_menu_callback(menu, menuitem);
+    return true;
+}
+
+bool next_page_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item * const menuitem) {
+	char name[6]="slot0";
+	name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+	mainMenu.get_item(name).check(false).refresh_item(mainMenu);
+    if (page<SaveState::MAX_PAGE-1) page++;
+    if (GetGameState_Run()/SaveState::SLOT_COUNT==page) {
+        name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
+        mainMenu.get_item(name).check(true).refresh_item(mainMenu);
+    }
+    refresh_slots_menu_callback(menu, menuitem);
     return true;
 }
 
@@ -9130,17 +9131,24 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
             item.set_text("Select save slot");
 
             {
-				DOSBoxMenu::callback_t callbacks[SaveState::SLOT_COUNT] = {save_slot_0_callback, save_slot_1_callback, save_slot_2_callback, save_slot_3_callback, save_slot_4_callback, save_slot_5_callback, save_slot_6_callback, save_slot_7_callback, save_slot_8_callback, save_slot_9_callback};
+				mainMenu.alloc_item(DOSBoxMenu::item_type_id,"prev_page").set_text("Previous page").set_callback_function(prev_page_menu_callback);
+				mainMenu.alloc_item(DOSBoxMenu::item_type_id,"next_page").set_text("Next page").set_callback_function(next_page_menu_callback);
+				mainMenu.alloc_item(DOSBoxMenu::item_type_id,"first_page").set_text("Go to first page").set_callback_function(first_page_menu_callback);
+				mainMenu.alloc_item(DOSBoxMenu::item_type_id,"last_page").set_text("Go to last page").set_callback_function(last_page_menu_callback);
 				char name[6]="slot0";
 				for (unsigned int i=0; i<SaveState::SLOT_COUNT; i++) {
 					name[4]='0'+i;
-					std::string command=SaveState::instance().getName(i);
-					std::string str="Slot "+(i>=9?"10":std::string(1, '1'+i))+(command==""?"":" "+command);
-					mainMenu.alloc_item(DOSBoxMenu::item_type_id,name).set_text(str.c_str()).set_callback_function(callbacks[i]);
+					std::string command=SaveState::instance().getName(page*SaveState::SLOT_COUNT+i);
+					std::string str="Slot "+to_string(page*SaveState::SLOT_COUNT+i+1)+(command==""?"":" "+command);
+					mainMenu.alloc_item(DOSBoxMenu::item_type_id,name).set_text(str.c_str()).set_callback_function(save_slot_callback);
 				}
             }
+            if (page!=GetGameState_Run()/SaveState::SLOT_COUNT) {
+                page=GetGameState_Run()/SaveState::SLOT_COUNT;
+                refresh_slots();
+            }
 			char name[6]="slot0";
-			name[4]='0'+(char)GetGameState_Run();
+			name[4]='0'+(char)(GetGameState_Run()%SaveState::SLOT_COUNT);
 			mainMenu.get_item(name).check(true).refresh_item(mainMenu);
 		}
 #endif
