@@ -1,4 +1,8 @@
 0.83.5
+  - Increased save slots from 10 to 100. Each page in
+    the save slot menu (under "Capture") still shows
+    10 slots, but you can now go to the previous or
+    next page for more save slots. (Wengier).
   - Added support for Glide wrapper. The library file
     glide2x.dll/libglide2x.so/libglide2x.dylib will be
     required for Glide to work. Be sure to use 32-bit
